--- a/src/components/progress-list/progress-list.pug
+++ b/src/components/progress-list/progress-list.pug
@@ -1,7 +1,13 @@
-include ../progress-list-item/progress-list-item
-
 mixin progress-list(items, blockName)
   ul.progress-list
     each item in items
+      - var { name, periodFrom, periodTo, title, description, nameColor } = item;
+      
       li.progress-list__item(class=`progress-list__item_type_for-${blockName}`)
-        +progress-list-item(item)
+        .progress-list__item-header
+          span.progress-list__item-name(class=[`progress-list__item-name_color_${nameColor}`])= name
+          span.progress-list__item-period
+            | // #[span.progress-list__item-period-part #{periodFrom}]
+            | - #[span.progress-list__item-period-part #{periodTo}]
+        span.progress-list__item-title= title
+        p.progress-list__item-description= description
