--- a/src/components/progress-list/progress-list.scss
+++ b/src/components/progress-list/progress-list.scss
@@ -1,4 +1,4 @@
-@import '../progress-list-item/progress-list-item';
+@import '../../styles/variables/colors';
 
 .progress-list {
   list-style-type: none;
@@ -6,6 +6,21 @@
   padding-left: 1.65rem;
 
   &__item {
+    color: $black;
+    position: relative;
+
+    &::before {
+      background-color: $black;
+      border-radius: 50%;
+      content: '';
+      display: inline-block;
+      height: 1.324rem;
+      left: -2.596rem;
+      position: absolute;
+      top: 0.4rem;
+      width: 1.324rem;
+    }
+
     &:nth-child(1) {
       margin-bottom: 0.15rem;
     }
@@ -21,5 +36,53 @@
         }
       }
     }
+  }
+
+  &__item-name {
+    font-size: 1.66rem;
+    font-weight: bold;
+    margin-right: 0.95rem;
+    text-transform: uppercase;
+    letter-spacing: -0.04rem;
+
+    &_color {
+      &_blue {
+        color: $blue;
+      }
+
+      &_black {
+        color: inherit;
+      }
+    }
+  }
+
+  &__item-period {
+    display: inline-block;
+    font-size: 1.7rem;
+    letter-spacing: -0.04rem;
+  }
+
+  &__item-period-part {
+    white-space: nowrap;
+  }
+
+  &__item-title {
+    font-size: 1.66rem;
+    line-height: 1.3;
+    text-transform: uppercase;
+    letter-spacing: -0.03rem;
+
+    @media screen and (max-width: 500px) {
+      font-size: 1.25rem;
+      overflow-wrap: anywhere;
+    }
+  }
+
+  &__item-description {
+    display: inline-block;
+    font-size: 1rem;
+    letter-spacing: -0.018rem;
+    line-height: 1.18;
+    margin: 0.168rem 0 0.65rem 0.118rem;
   }
 }
