replace fonts with woff and woff2 formats #32

--- a/src/styles/mixins/font-face.scss
+++ b/src/styles/mixins/font-face.scss
@@ -15,8 +15,7 @@
     font-family: $font-family;
     font-style: normal;
     font-weight: $weight;
-    src: url('../../assets/fonts/#{$font-name}/#{$font-name}.woff') format('woff'),
-      url('../../assets/fonts/#{$font-name}/#{$font-name}.ttf') format('ttf'),
-      url('../../assets/fonts/#{$font-name}/#{$font-name}.svg') format('svg');
+    src: url('../../assets/fonts/#{$font-name}/#{$font-name}.woff2'),
+      url('../../assets/fonts/#{$font-name}/#{$font-name}.woff');
   }
 }
