--- a/src/styles/variables/colors.scss
+++ b/src/styles/variables/colors.scss
@@ -1,5 +1,4 @@
-$resume-background: #fff;
+$color-primary: #3d6cb0;
 
-$blue: #3d6cb0;
-$black: #000;
-$light-gray: #e6e6e6;
+$color-secondary-main: #000;
+$color-secondary-light: #e6e6e6;
