--- a/src/components/block-header/block-header.scss
+++ b/src/components/block-header/block-header.scss
@@ -6,7 +6,7 @@
   width: 100%;
 
   &__name {
-    color: $blue;
+    color: $color-primary;
     font-size: 2.671rem;
     font-weight: bold;
     letter-spacing: -0.08rem;
@@ -51,7 +51,7 @@
   }
 
   &__line {
-    background-color: $blue;
+    background-color: $color-primary;
     height: 0.45vw;
     margin-left: 1.7%;
     width: 100%;
