add background-color to html

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -11,6 +11,7 @@ html, body {
 }
 
 html {
+  background-color: #fff;
   font: normal normal 20px 'Myriad Pro', 'Arial', sans-serif;
   color: $color-secondary-main;
   
