--- a/src/components/user-info/user-info.pug
+++ b/src/components/user-info/user-info.pug
@@ -1,4 +1,4 @@
-mixin user-info({ name = "name here", surname = "surname", job = "graphic designer" } = {})
+mixin user-info({ name = 'name here', surname = 'surname', job = 'graphic designer' } = {})
   section.user-info
     .user-info__photo-frame
       img.user-info__photo(
