--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -20,6 +20,6 @@ html
 
     title Resume
   body
-    - var content = require("../../assets/data/content.json");
+    - const content = require('../../assets/data/content.json');
 
     +resume(content)
