--- a/src/components/progress-list/progress-list.pug
+++ b/src/components/progress-list/progress-list.pug
@@ -1,13 +1,13 @@
 mixin progress-list(items, blockName)
   ul.progress-list
     each item in items
-      - var { name, period, title, description, nameColor } = item;
+      - const { name, period, title, description, nameColor } = item;
       
       li.progress-list__item(class=`progress-list__item_type_for-${blockName}`)
         .progress-list__item-header
           - 
-            var itemNameClass = nameColor === "black" 
-              ? "progress-list__item-name"
+            const itemNameClass = nameColor === 'black'
+              ? 'progress-list__item-name'
               : `progress-list__item-name progress-list__item-name_color_${nameColor}`;
               
           span(class=itemNameClass)= name
