--- a/src/components/block-header/block-header.scss
+++ b/src/components/block-header/block-header.scss
@@ -22,30 +22,9 @@
       margin-bottom: 0;
     }
 
-    &_type {
-      &_for-skills {
-        margin-right: 0.45rem;
-      }
-
-      &_for-education {
-        margin-left: 3.1%;
-      }
-
-      &_for-experience {
-        margin-bottom: 0.05rem;
-        margin-left: 2.69%;
-
-        @media screen and (max-width: 1680px) {
-          margin-bottom: 0;
-        }
-      }
-
-      &_for-software {
-        margin: 0.2rem 0.85rem 0 3%;
-
-        @media screen and (max-width: 1680px) {
-          margin-right: 0;
-        }
+    &_variant {
+      &_condensed {
+        margin-left: 3%;
       }
     }
   }
