fix color variable names #32

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -23,7 +23,7 @@
   }
 
   &__item-data {
-    color: $color-secondary-main;
+    color: $color-text-primary;
     display: table-cell;
     font-size: 1.34rem;
     letter-spacing: -0.03rem;
