--- a/src/components/user-info/user-info.scss
+++ b/src/components/user-info/user-info.scss
@@ -24,7 +24,7 @@
   }
 
   &__description {
-    color: $color-secondary-main;
+    color: $color-text-primary;
     line-height: 0.9;
     text-align: center;
     text-transform: uppercase;
