--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -13,7 +13,7 @@ html, body {
 html {
   background-color: #fff;
   font: normal normal 20px 'Myriad Pro', 'Arial', sans-serif;
-  color: $color-secondary-main;
+  color: $color-text-primary;
   
   @media screen and (max-width: 1094px) {
     font-size: 14px;
