--- a/src/styles/variables/colors.scss
+++ b/src/styles/variables/colors.scss
@@ -1,4 +1,4 @@
 $color-primary: #3d6cb0;
+$color-secondary: #e6e6e6;
 
-$color-secondary-main: #000;
-$color-secondary-light: #e6e6e6;
+$color-text-primary: #000;
