--- a/src/components/experience/experience.pug
+++ b/src/components/experience/experience.pug
@@ -6,4 +6,4 @@ mixin experience(items)
     +block-header({ blockName: 'experience', variant: 'condensed' })
 
     .experience__list
-      +progress-list(items, 'experience')
+      +progress-list({ items })
